--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: "Tmux | Run Ubuntu tasks"
+  ansible.builtin.import_tasks: ubuntu.yml
+  when: ansible_os_family == 'Debian'
+
+- name: "Tmux | Run Arch tasks"
+  ansible.builtin.import_tasks: arch.yml
+  when: ansible_os_family == 'Archlinux'
+
 - name: "Tmux | Configure tmux"
   ansible.builtin.copy:
     src: tmux
