tmux and nvim install scripts

--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: "Neovim | Run Ubuntu tasks"
+  ansible.builtin.import_tasks: ubuntu.yml
+  when: ansible_os_family == 'Debian'
+
+- name: "Neovim | Run Arch tasks"
+  ansible.builtin.import_tasks: arch.yml
+  when: ansible_os_family == 'Archlinux'
+
 - name: "Neovim | Configure nvim"
   ansible.builtin.copy:
     src: nvim
