added awesome and kitty, and made move to tag also view tag awesome

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,4 +1,15 @@
-default_roles:
+ubuntu_roles:
   - bash
   - tmux
   - nvim
+
+arch_roles:
+  - bash
+  - tmux
+  - nvim
+  - awesome
+  - rofi
+  - nitrogen
+  - yay
+  - kitty
+  - pulseaudio
