--- a/roles/fonts/tasks/main.yml
+++ b/roles/fonts/tasks/main.yml
@@ -1,11 +1,13 @@
 - name: "Fonts | Install ttf-agave-nerd on Arch"
+  become_user: root
+  become: true
   community.general.pacman:
     name: ttf-agave-nerd
     state: present
-  become_user: root
 
 - name: "Fonts | Install noto-fonts on Arch"
+  become_user: root
+  become: true
   community.general.pacman:
     name: noto-fonts
     state: present
-  become_user: root
