--- a/roles/yay/tasks/main.yml
+++ b/roles/yay/tasks/main.yml
@@ -1,14 +1,15 @@
--name: "Yay | Create Downloads Directory"
+- name: "Yay | Create Downloads Directory"
   ansible.builtin.file:
     path: "{{ ansible_user_dir }}/Downloads/"
     state: directory
     mode: '0755'
 
--name: "Yay | Install base-devel"
+- name: "Yay | Install base-devel"
+  become_user: root
+  become: true
   community.general.pacman:
     name: base-devel
     state: present
-  become_user: root
 
 -name: "Yay | Clone yay-bin repository"
   ansible.builtin.git:
