--- a/roles/discord/tasks/main.yml
+++ b/roles/discord/tasks/main.yml
@@ -1,5 +1,6 @@
 - name: "Discord | Install on Arch"
+  become_user: root
+  become: true
   community.general.pacman:
     name: discord
     state: present
-  become_user: root
