--- a/roles/ephoto/tasks/main.yml
+++ b/roles/ephoto/tasks/main.yml
@@ -1,5 +1,6 @@
 - name: "EPhoto | Install on Arch"
+  become_user: root
+  become: true
   community.general.pacman:
     name: ephoto
     state: present
-  become_user: root
