--- a/roles/nvm/tasks/main.yml
+++ b/roles/nvm/tasks/main.yml
@@ -1,21 +1,87 @@
-- name: "NVM | Install nvm"
+- name: "NVM | Download Latest Version JSON"
+  ansible.builtin.uri:
+    url: https://api.github.com/repos/nvm-sh/nvm/releases/latest
+  register: nvm_latest_version_json
+  changed_when: false
+
+- name: "NVM | Registering NVM Latest Release"
+  ansible.builtin.set_fact:
+    nvm_latest_release: "{{ nvm_latest_version_json.json.tag_name }}"
+
+- name: "NVM | Registering NVM Latest Version"
+  ansible.builtin.set_fact:
+    nvm_latest_version: "{{ nvm_latest_release.stdout | default('') }}"
+
+- name: "NVM | Show nvm_latest_release debug"
+  ansible.builtin.debug:
+    var: nvm_latest_release
+
+- name: "NVM | Clone latest version"
+  ansible.builtin.git:
+    repo: https://github.com/nvm-sh/nvm.git
+    dest: "{{ ansible_env.HOME }}/.nvm"
+    version: "{{ nvm_latest_release }}"
+
+- name: "NVM | check export NVM_DIR"
   ansible.builtin.shell: >
-    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
+    grep 'export NVM_DIR = "$HOME/.nvm"' ~/.bashrc
   args:
-    creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
+    executable: /bin/bash
+  register: result
+  ignore_errors: true
 
-- name: "NVM | Install latest node version"
+- name: "NVM | export NVM_DIR"
   ansible.builtin.shell: >
-    nvm install node
+    echo 'export NVM_DIR="$HOME/.nvm"' >> ~/.bashrc
+  args:
+    executable: /bin/bash
+  when: result.rc == 1
 
-- name: "NVM | Use latest node version"
+- name: "NVM | check nvm.sh"
   ansible.builtin.shell: >
-    nvm use node
+    grep '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' ~/.bashrc
+  args:
+    executable: /bin/bash
+  register: result
+  ignore_errors: true
 
-- name: "NVM | Use latest node version"
+- name: "NVM | nvm.sh"
   ansible.builtin.shell: >
-    nvm use node
+    echo '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> ~/.bashrc
+  args:
+    executable: /bin/bash
+  when: result.rc == 1
 
-- name: "NVM | Install latest npm version"
+- name: "NVM | check bash_completion NVM_DIR"
   ansible.builtin.shell: >
-    nvm install-latest-npm
+    grep '[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"' ~/.bashrc
+  args:
+    executable: /bin/bash
+  register: result
+  ignore_errors: true
+
+- name: "NVM | export NVM_DIR"
+  ansible.builtin.shell: >
+    echo '[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"' >> ~/.bashrc
+  args:
+    executable: /bin/bash
+  when: result.rc == 1
+
+- name: "NVM | Install latest node"
+  ansible.builtin.shell: >
+    source ~/.nvm/nvm.sh && nvm install node
+  args:
+    executable: /bin/bash
+
+- name: "NVM | Use latest node"
+  ansible.builtin.shell: >
+    source ~/.nvm/nvm.sh && nvm use node
+  args:
+    executable: /bin/bash
+
+- name: "NVM | Install latest npm"
+  ansible.builtin.shell: >
+    source ~/.nvm/nvm.sh && nvm install-latest-npm
+  args:
+    executable: /bin/bash
+
