--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: "Tmux | Run Ubuntu tasks"
-  ansible.builtin.import_tasks: ubuntu.yml
+- name: "Tmux | Run Debian tasks"
+  ansible.builtin.import_tasks: debian.yml
   when: ansible_os_family == 'Debian'
 
 - name: "Tmux | Run Arch tasks"
