--- a/main.yml
+++ b/main.yml
@@ -4,10 +4,10 @@
   connection: local
 
   tasks:
-    - name: Set Ubuntu roles
+    - name: Set Debian roles
       ansible.builtin.set_fact:
         run_roles: "{{ ansible_run_tags != ['all'] and ansible_run_tags or
-        ubuntu_roles | difference(exclude_roles | default([])) }}"
+        debian_roles | difference(exclude_roles | default([])) }}"
       when: ansible_os_family == 'Debian'
       tags:
         - always
