--- a/roles/bash/tasks/debian.yml
+++ b/roles/bash/tasks/debian.yml
@@ -1,5 +1,5 @@
-- name: "Bash | Copy ubuntu .bash_profile"
+- name: "Bash | Copy debian .bash_profile"
   ansible.builtin.copy:
-    src: "ubuntu/.bash_profile"
+    src: "debian/.bash_profile"
     dest: "{{ ansible_user_dir }}/.bash_profile"
     mode: "0644"
