--- a/roles/zips/tasks/debian.yml
+++ b/roles/zips/tasks/debian.yml
@@ -1,11 +1,11 @@
-- name: "Zips | Install zip on Ubuntu"
+- name: "Zips | Install zip on Debian"
   become: true
   become_user: root
   ansible.builtin.apt:
     name: zip
     state: present
 
-- name: "Zips | Install unzip on Ubuntu"
+- name: "Zips | Install unzip on Debian"
   become: true
   become_user: root
   ansible.builtin.apt:
