--- a/roles/glazewm/files/.glaze-wm/config.yaml
+++ b/roles/glazewm/files/.glaze-wm/config.yaml
@@ -1,4 +1,4 @@
-general:
+gegeneral:
   # Whether to automatically focus windows underneath the cursor.
   focus_follows_cursor: false
 
@@ -57,8 +57,8 @@ bar:
     label: " | "
   components_left:
     - type: "tiling direction"
-      label_horizontal: "â®‚"
-      label_vertical: "â®"
+      label_horizontal: "⮂"
+      label_vertical: "⮁"
       background: "#ffffff33"
       margin: "0 4px"
       padding: "0 8px"
@@ -69,21 +69,39 @@ bar:
   components_right:
     - type: "battery"
       label_draining: "{battery_level}%"
-      label_charging: "{battery_level}% ó°  "
+      label_charging: "{battery_level}% 󰠠"
       margin: "0 4px 0 0"
     - type: "clock"
-      time_formatting: "hh:mm tt ó°¥”  ddd MMM d ï³ "
+      time_formatting: "hh:mm tt 󰥔  ddd MMM d  "
 
 workspaces:
   - name: "1"
+    display_name: "一"
+    keep_alive: true
   - name: "2"
+    display_name: "二"
+    keep_alive: true
   - name: "3"
+    display_name: "三"
+    keep_alive: true
   - name: "4"
+    display_name: "四"
+    keep_alive: true
   - name: "5"
+    display_name: "五"
+    keep_alive: true
   - name: "6"
+    display_name: "六"
+    keep_alive: true
   - name: "7"
+    display_name: "七"
+    keep_alive: true
   - name: "8"
+    display_name: "八"
+    keep_alive: true
   - name: "9"
+    display_name: "九"
+    keep_alive: true
 
 window_rules:
   # Task Manager requires admin privileges to manage and should be ignored unless running
@@ -167,11 +185,11 @@ keybindings:
 
   # Change the focused window to be maximized / unmaximized.
   - command: "toggle maximized"
-    binding: "Alt+X"
+    binding: "Alt+F"
 
   # Minimize focused window.
   - command: "set minimized"
-    binding: "Alt+M"
+    binding: "Alt+N"
 
   # Close focused window.
   - command: "close"
@@ -184,21 +202,6 @@ keybindings:
   # Re-evaluate configuration file.
   - command: "reload config"
     binding: "Alt+Shift+R"
-
-  # Launch CMD terminal (alternatively `exec wt` or `exec %ProgramFiles%/Git/git-bash.exe`
-  # to start Windows Terminal and Git Bash respectively.
-  - command: "exec wt"
-    binding: "Alt+Enter"
-
-  # Focus the workspace that last had focus.
-  - command: "focus workspace recent"
-    binding: "Alt+Y"
-
-  # Focus the next/previous workspace defined in `workspaces` config.
-  - command: "focus workspace next"
-    binding: "Alt+T"
-  - command: "focus workspace prev"
-    binding: "Alt+Shift+T"
 
   # Change focus to a workspace defined in `workspaces` config.
   - command: "focus workspace 1"
@@ -249,3 +252,4 @@ keybindings:
     binding: "Alt+Shift+8"
   - commands: ["move to workspace 9", "focus workspace 9"]
     bindings: ["Alt+Shift+9"]
+
