edits for fzf and nvim on ubuntu

--- a/roles/nvim/tasks/debian.yml
+++ b/roles/nvim/tasks/debian.yml
@@ -8,6 +8,7 @@
       - unzip
       - ripgrep
       - gcc
+      - software-properties-common
     state: present
 
 - name: "Neovim | Install on Debian"
