--- a/roles/fzf/tasks/debian.yml
+++ b/roles/fzf/tasks/debian.yml
@@ -11,3 +11,7 @@
     depth: 1
     dest: "{{ ansible_user_dir }}/.fzf"
   notify: "Install fzf"
+
+- name: "Install fzf"
+  ansible.builtin.shell: "{{ ansible_user_dir }}/.fzf/install --all --no-update-rc --no-zsh --no-fish"
+
