neovim install on ubuntu

--- a/roles/nvim/tasks/debian.yml
+++ b/roles/nvim/tasks/debian.yml
@@ -11,9 +11,17 @@
       - software-properties-common
     state: present
 
-- name: "Neovim | Install on Debian"
+- name: "Neovim | Add unstable ppa on Debian"
   become: true
   become_user: root
   ansible.builtin.apt_repository:
     repo: ppa:neovim-ppa/unstable
     state: present
+
+- name: "Neovim | Install on Debian"
+  become: true
+  become_user: root
+  ansible.builtin.apt:
+    name: neovim
+    state: present
+
