--- a/roles/xorg/tasks/main.yml
+++ b/roles/xorg/tasks/main.yml
@@ -12,3 +12,8 @@
     name: xorg-xinit
     state: present
 
+- name: "Xorg | Link arch .xinitrc"
+  ansible.builtin.file:
+    src: "{{ playbook_dir}}/roles/xorg/files/.xinitrc"
+    dest: "{{ ansible_user_dir }}/.xinitrc"
+    state: link
