--- a/roles/awesome/tasks/main.yml
+++ b/roles/awesome/tasks/main.yml
@@ -6,9 +6,7 @@
     state: present
 
 - name: "Awesome | Configure awesome"
-  ansible.builtin.copy:
-    src: awesome
-    dest: "{{ ansible_user_dir }}/.config/"
-    mode: "0644"
-    directory_mode: "0755"
-    force: true
+  ansible.builtin.file:
+    src: "{{ playbook_dir }}/roles/awesome/files/awesome"
+    dest: "{{ ansible_user_dir }}/.config/awesome"
+    state: link
