--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -7,10 +7,8 @@
   when: ansible_os_family == 'Archlinux'
 
 - name: "Neovim | Configure nvim"
-  ansible.builtin.copy:
-    src: nvim
-    dest: "{{ ansible_user_dir }}/.config/"
-    mode: "0644"
-    directory_mode: "0755"
-    force: true
+  ansible.builtin.file:
+    src: "{{ playbook_dir }}/roles/nvim/files/nvim"
+    dest: "{{ ansible_user_dir }}/.config/nvim"
+    state: link
 
