--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -8,10 +8,8 @@
   when: ansible_os_family == 'Archlinux'
 
 - name: "Tmux | Configure tmux"
-  ansible.builtin.copy:
-    src: tmux
-    dest: "{{ ansible_user_dir }}/.config/"
-    mode: "0644"
-    directory_mode: "0755"
-    force: true
+  ansible.builtin.file:
+    src: "{{ playbook_dir }}/roles/tmux/files/tmux"
+    dest: "{{ ansible_user_dir }}/.config/tmux"
+    state: link
 
