--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "roles/awesome/files/awesome-config"]
 	path = roles/awesome/files/awesome-config
 	url = git@github.com:ethanrutt/awesome-config.git
+[submodule "roles/nvim/files/neovim-config"]
+	path = roles/nvim/files/neovim-config
+	url = git@github.com:ethanrutt/neovim-config.git
