--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -8,7 +8,7 @@
 
 - name: "Neovim | Configure nvim"
   ansible.builtin.file:
-    src: "{{ playbook_dir }}/roles/nvim/files/nvim"
+    src: "{{ playbook_dir }}/roles/nvim/files/neovim-config/nvim"
     dest: "{{ ansible_user_dir }}/.config/nvim"
     state: link
 
