--- a/roles/awesome/tasks/main.yml
+++ b/roles/awesome/tasks/main.yml
@@ -13,6 +13,11 @@
   ansible.builtin.shell: "yay -S lain-git --noconfirm"
   when: ("yay" in ansible_facts.packages) and ("lain-git" not in ansible_facts.packages)
 
+- name: "Awesome | Delete awesome if it exists"
+  ansible.builtin.file:
+    path: "{{ ansible_user_dir }}/.config/awesome"
+    state: absent
+
 - name: "Awesome | Configure awesome"
   ansible.builtin.file:
     src: "{{ playbook_dir }}/roles/awesome/files/awesome-config/awesome"
