--- a/roles/bash/tasks/debian.yml
+++ b/roles/bash/tasks/debian.yml
@@ -1,3 +1,8 @@
+- name: "Bash | Delete debian .bash_profile if it exists"
+  ansible.builtin.file:
+    path: "{{ ansible_user_dir }}/.bash_profile"
+    state: absent
+
 - name: "Bash | Link debian .bash_profile"
   ansible.builtin.file:
     src: "{{ playbook_dir }}/roles/debian/files/debian/.bash_profile"
