--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -6,6 +6,11 @@
   ansible.builtin.import_tasks: arch.yml
   when: ansible_os_family == 'Archlinux'
 
+- name: "Neovim | Delete nvim if it exists"
+  ansible.builtin.file:
+    path: "{{ ansible_user_dir }}/.config/nvim"
+    state: absent
+
 - name: "Neovim | Configure nvim"
   ansible.builtin.file:
     src: "{{ playbook_dir }}/roles/nvim/files/neovim-config/nvim"
