--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -1,4 +1,3 @@
----
 - name: "Tmux | Run Debian tasks"
   ansible.builtin.import_tasks: debian.yml
   when: ansible_os_family == 'Debian'
@@ -7,9 +6,13 @@
   ansible.builtin.import_tasks: arch.yml
   when: ansible_os_family == 'Archlinux'
 
+- name: "Tmux | Delete tmux if it exists"
+  ansible.builtin.file:
+    path: "{{ ansible_user_dir }}/.config/tmux"
+    state: absent
+
 - name: "Tmux | Configure tmux"
   ansible.builtin.file:
     src: "{{ playbook_dir }}/roles/tmux/files/tmux"
     dest: "{{ ansible_user_dir }}/.config/tmux"
     state: link
-
