install and configure bat

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -6,6 +6,7 @@ debian_roles:
   - tmux
   - zips
   - eza
+  - bat
 
 arch_roles:
   - awesome
@@ -32,3 +33,4 @@ arch_roles:
   - zips
   - fcitx
   - eza
+  - bat
