--- a/roles/picom/tasks/main.yml
+++ b/roles/picom/tasks/main.yml
@@ -4,7 +4,7 @@
 
 - name: "picom | Install picom-arian8j2-git"
   ansible.builtin.shell: "yay -S picom-arian8j2-git --noconfirm"
-  when: ("yay" in ansible_facts.packages) and ("picom-arian8j2-git" not in ansible_facts.packages)
+  when: ("yay-bin" in ansible_facts.packages) and ("picom-arian8j2-git" not in ansible_facts.packages)
 
 - name: "picom | Delete picom if it exists"
   ansible.builtin.file:
