--- a/roles/bat/tasks/main.yml
+++ b/roles/bat/tasks/main.yml
@@ -6,3 +6,17 @@
   ansible.builtin.import_tasks: arch.yml
   when: ansible_os_family == 'Archlinux'
 
+- name: "Bat | Create themes dir"
+  ansible.builtin.file:
+    path: "{{ ansible_user_dir }}/.config/bat/themes"
+    state: directory
+    mode: '0755'
+
+- name: "Bat | Get Catppuccin themes"
+  ansible.builtin.get_url:
+    url: "https://github.com/catppuccin/bat/raw/main/themes/Catppuccin%20Mocha.tmTheme"
+    dest: "{{ ansible_user_dir }}/.config/bat/themes/Catppuccin-Mocha.tmTheme"
+
+- name: "Bat | Reload themes cache"
+  ansible.builtin.shell: "bat cache --build"
+
