--- a/roles/nm-connection-editor/tasks/main.yml
+++ b/roles/nm-connection-editor/tasks/main.yml
@@ -1,7 +1,7 @@
-- name: "Playerctl | Install on Arch"
+- name: "nm-connection-editor | Install on Arch"
   become: true
   become_user: root
   community.general.pacman:
-    name: playerctl
+    name: nm-connection-editor
     state: present
 
