--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -7,6 +7,7 @@ debian_roles:
   - nvim
   - nvm
   - zips
+  - git
 
 arch_roles:
   - awesome
@@ -43,3 +44,4 @@ arch_roles:
   - fcitx
   - 1password
   - bash
+  - git
