--- a/roles/nvm/tasks/main.yml
+++ b/roles/nvm/tasks/main.yml
@@ -16,11 +16,11 @@
   ansible.builtin.debug:
     var: nvm_latest_release
 
-- name: "NVM | Clone latest version"
-  ansible.builtin.git:
-    repo: https://github.com/nvm-sh/nvm.git
-    dest: "{{ ansible_env.HOME }}/.nvm"
-    version: "{{ nvm_latest_release }}"
+- name: "NVM | Install nvm"
+  ansible.builtin.shell: >
+    "PROFILE=/dev/null bash -c 'curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/{{ nvm_latest_release }}/install.sh | bash'"
+  args:
+    creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
 
 - name: "NVM | Install latest node"
   ansible.builtin.shell: >
