update nvim dependencies to be actual packages

--- a/roles/nvim/tasks/debian.yml
+++ b/roles/nvim/tasks/debian.yml
@@ -9,8 +9,8 @@
       - unzip
       - ripgrep
       - gcc
-      - python
-      - java
+      - python3
+      - default-jdk
       - software-properties-common
     state: present
 
