--- a/roles/nvim/tasks/arch.yml
+++ b/roles/nvim/tasks/arch.yml
@@ -10,7 +10,7 @@
       - ripgrep
       - gcc
       - python
-      - java
+      - jre-openjdk
     state: present
 
 - name: "Neovim | Install on Arch"
