--- a/roles/fd/tasks/main.yml
+++ b/roles/fd/tasks/main.yml
@@ -1,7 +1,8 @@
-- name: "FD | Install on Arch"
-  become: true
-  become_user: root
-  community.general.pacman:
-    name: fd
-    state: present
+- name: "FD | Run Debian tasks"
+  ansible.builtin.import_tasks: debian.yml
+  when: ansible_os_family == 'Debian'
+
+- name: "FD | Run Arch tasks"
+  ansible.builtin.import_tasks: arch.yml
+  when: ansible_os_family == 'Archlinux'
 
