--- a/roles/nvim/tasks/debian.yml
+++ b/roles/nvim/tasks/debian.yml
@@ -11,6 +11,7 @@
       - gcc
       - python3
       - python-is-python3
+      - python3-venv
       - default-jdk
       - software-properties-common
     state: present
