add check for arch wsl in debug

--- a/roles/debug/tasks/main.yml
+++ b/roles/debug/tasks/main.yml
@@ -1,3 +1,4 @@
 - name: "Debug Facts"
   ansible.builtin.debug:
     msg: "{{ ansible_facts }}"
+  when: "(ansible_os_family == 'Archlinux') and (ansible_facts.virtualization_type == 'WSL')"
