--- a/roles/nvm/tasks/main.yml
+++ b/roles/nvm/tasks/main.yml
@@ -18,7 +18,7 @@
 
 - name: "NVM | Install nvm"
   ansible.builtin.shell: >
-    "PROFILE=/dev/null bash -c 'curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/{{ nvm_latest_release }}/install.sh | bash'"
+    PROFILE=/dev/null bash -c 'curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/{{ nvm_latest_release }}/install.sh | bash'
   args:
     creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
 
