add git latest version and specify meta in fzf

--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -9,3 +9,7 @@
     dest: "{{ ansible_user_dir }}/.gitconfig"
     state: link
 
+- name: "Git | Run Debian tasks"
+  ansible.builtin.import_tasks: debian.yml
+  when: ansible_os_family == 'Debian'
+
