jre-openjdk not working, switch to currently installed java instead

--- a/roles/nvim/tasks/arch.yml
+++ b/roles/nvim/tasks/arch.yml
@@ -10,7 +10,7 @@
       - ripgrep
       - gcc
       - python
-      - jre-openjdk
+      - jdk21-openjdk
     state: present
 
 - name: "Neovim | Install on Arch"
